--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,16 @@
 </head>
 <body>
 <div class="container">
-    <h1>TODO App</h1>
-    <form id="todo-form">
-        <label for="todo-input"></label><input type="text" id="todo-input" placeholder="Add a new todo" required>
-        <button type="submit" onclick="addTodo()">Add</button>
-    </form>
-    <div class="todo-container">
-        <ul id="todo-list"></ul>
-    </div>
+    <!--    <h1>TODO App</h1>-->
+    <!--    <form id="todo-form">-->
+    <!--        <label for="todo-input"></label><input type="text" id="todo-input" placeholder="Add a new todo" required>-->
+    <!--        <button type="submit" onclick="addTodo()">Add</button>-->
+    <!--    </form>-->
+    <!--    <div class="todo-container">-->
+    <!--        <ul id="todo-list"></ul>-->
+    <!--    </div>-->
+    <!-- trying to make react -->
+    <div id="root"></div>
 
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
